<resources>
    <string name="app_name">ChatApp</string>
    <string name="app_logo">Chat App Logo</string>
    <string name="welcome">Welcome to ChatApp</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="name">Name</string>
    <string name="chats">Chats</string>
    <string name="new_chat">New Chat</string>
    <string name="type_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="search">Search...</string>
    <string name="no_chats">No chats yet. Start a new conversation!</string>
    <string name="error_general">Something went wrong. Please try again.</string>
    <string name="error_email">Please enter a valid email</string>
    <string name="error_password">Password must be at least 6 characters</string>
    <string name="error_password_match">Passwords don\'t match</string>
</resources>